csc416/assignment_6/tests/pass/semantic/1/joepass2.ram15
class Test1 {
    public static void main(String[] a) {
        print(new Test1Class().doStuff());
    }
}
class Test1Class {
    public int doStuff() {
        int a;
        int b;
        int[] c;

        c = new int[1];
        c[0] = 1;
        a = 5;
        b = c[0];

        return a * b + c[0];
    }
}