csc416/assignment_6/tests/fail/semanticerrors/1/joefail1.ram15
class Test1 {
    public static void main(String[] a) {
        print(new Test1Class().PrintNums());
    }
}
class Test1Class {
    public int PrintNums() {
        int[] numbers;
        bool f;
        Test1 p;
        numbers[0] = 5;
        f = 1;
        p = new Test1();

/* A longer comment
spanning lines
*/
        while(numbers[0] < p){
             numbers[0] = numbers[0] + 1;
             print(numbers[0]);
        }

        numbers = numbers[:numbers[0]];
        return f;

    }
}